assets/src/css/stay.css
/* ... */
.comments .comment__content .face {
  display: inline-block;
  vertical-align: top;
  width: 22px;
  height: 22px;
  line-height: 22px;
  background-size: 22px 22px;
}

.comments .comment__reply {
  position: absolute;
  top: 1.4rem;
  right: 0;
  font-size: 1.2rem;
  color: #999;
}

.comments .form {
  position: relative;
  margin-bottom: 7rem;
}

.comments .form:after {
  position: absolute;
  content: '';
  left: 0;
  right: 0;
  bottom: -4.5rem;
  margin: auto;
  width: 55%;
  text-align: center;
  border-top: 2px dashed #cae0dd;
}

.comments .form__reply {
  padding-left: 5rem;
  margin: 2rem 0;
}

.comments .form__reply:after {
  display: none;
}

.comments .form__text {
  display: flex;
  align-items: stretch;
  position: relative;
  z-index: 2;
  margin-bottom: 1rem;
}

.comments .form__textarea {
  flex: 2;
  display: flex;
  align-items: stretch;
  height: 120px;
}

@media screen and (max-width: 680px) {
  .comments .form__textarea {
    height: 90px;
  }
}

.comments .form__textarea .textarea {
  width: 100%;
  border-right: 0;
  padding: 9px;
  border: 1PX solid #ccc;
  border-right: 0;
  box-sizing: border-box;
  transition: border 0.15s ease-in;
}

.comments .form__input .text::placeholder,
.comments .form__textarea .textarea::placeholder {
  color: #999;
}

.comments .form__face {
  position: absolute;
  z-index: 2;
  left: 0;
  bottom: 1PX;
}

.comments .form__face__hold {
  width: 33px;
  height: 33px;
  line-height: 33px;
  margin-left: 1PX;
  background: #fff url(../img/face.png) center no-repeat;
  background-size: 24px 24px;
  cursor: pointer;
  opacity: .7;
  transform: rotateZ(45deg);
  transition: opacity .25s, transform .25s;
  border-radius: 50%;
}
.comments .form__face__hold:hover,
.comments .form__face__hold:active {
  opacity: 1;
}

.comments .form__face__list {
  display: flex;
  flex-flow: row wrap;
  position: absolute;
  left: 0;
  top: 100%;
  width: 330px;
  margin-top: 1PX;
  opacity: 0;
  background: #fff;
  border: 1PX solid #ccc;
  border-top: 0;
  box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.15);
  transform: translate(-50%, -50%) scale(0);
  transition: opacity .2s, transform .25s;
}

@media screen and (max-width: 680px) {
  .comments .form__face__list {
    width: 264px;
  }
}

.comments .form__face__list .face {
  width: 33px;
  height: 33px;
  line-height: 33px;
  background-size: 24px 24px;
  transition: background-color .3s;
  cursor: pointer;
}

.comments .form__face__list .face:hover,
.comments .form__face__list .face:active {
  background-color: rgba(0, 0, 0, .15);
}

.comments .form__face__active .form__face__hold  {
  opacity: 1;
  transform: rotateZ(0);
}

.comments .form__face__active .form__face__list  {
  opacity: 1;
  transform: translate(0, 0) scale(1);
}

.comments .form__error {
  position: absolute;
  z-index: 2;
  left: 1PX;
  bottom: 1PX;
  font-size: 1.2rem;
  height: 33px;
  line-height: 33px;
  padding: 0 12px;
  opacity: 1;
  background-color: transparent;
  box-sizing: border-box;
  transition: opacity .2s, color .25s, background-color .25s, transform .25s;
  transform: translate(-50%, 50%) scale(0);
}

.comments .form__error__show {
  opacity: 1;
  background-color: #eee;
  transform: translate(0, 0) scale(1);
}

.comments .__success {
  color: #3c763d;
  background-color: #dff0d8;
}

.comments .__warning {
  color: #a94442;
  background-color: #f2dede;
}

.comments .form__text .submit {
  color: #fff;
  padding: 0 2rem;
  background: #4a9c90;
  border: 0;
  transition: background 0.15s ease-in;
}

.comments .form__text .submit:focus,
.comments .form__text .submit:hover {
  background: #378e81;
}

.comments .form__text .submit:active {
  background: #3a7d74;
}

.comments .form__user {
  display: flex;
  margin: 1.5rem 0 1rem;
  opacity: 1;
  transition: transform 0.25s ease-in, margin 0.25s ease-in, opacity 0.25s ease-in;
  transform: translateY(0);
}

.comments .form__user__hide {
  height: auto;
  margin: 0 0 -3rem;
  opacity: 0;
  transform: translateY(-150%);
}

.comments .form__input {
  flex: 1;
}

.comments .form__input .text {
  width: 100%;
  padding: 0.5rem 0;
  border: 0;
  border-bottom: 2px solid #ccc;
  box-sizing: border-box;
  transition: border 0.15s ease-in;
}

.comments .form__clear {
  margin: 0 2rem;
}

.comments .form__input .text:focus,
.comments .form__text .textarea:focus {
  border-color: #378e81;
}

.comments .form__tip {
  font-size: 16px;
  text-align: right;
  color: #bbb;
}

.comments .form__tip a {
  text-decoration: underline;
}

@media screen and (max-width: 680px) {
  .comments .form__tip {
    font-size: 14px;
  }
}

.footer .container {
  position: relative;
  padding: 1.5rem;
  border-top: 1PX solid #ddd;
}

.footer .footer__item {
  font-size: 1.3rem;
  text-align: center;
  color: #bbb;
}

.footer .footer__item + .footer__item {
  margin-top: 6px;
}

.footer .footer__item a {
  text-decoration: underline;
}

.footer .footer__beaker {
  display: flex;
  flex-direction: column-reverse;
  position: fixed;
  right: 2rem;
  bottom: 4.5rem;
  width: 30px;
  height: 30px;
  background: #ccc;
  cursor: pointer;
  overflow: hidden;
  border-radius: 50%;
  opacity: 0.8;
  border: 1PX solid #ccc;
  box-sizing: border-box;
  transform: translateY(7.5rem);
  transition: transform 0.25s ease-in-out;
}

.footer .footer__beaker span {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background-image: url(../img/bg_beaker.png);
  background-repeat: repeat-x;
  background-position: 0 30px;
  background-size: cover;
  animation: beaker 2s infinite linear;
}

.footer .footer__beaker__on {
  transform: translateY(0);
}

@keyframes beaker {
  0% {
    background-position-x: 0;
  }
  to {
    background-position-x: 4.8rem;
  }
}

.main .page__404 {
  text-align: center;
  padding: 8rem 0 5rem;
  margin: 4rem 0 0;
  background: #fff;
}

.main .page__404 .not__title {
  font-size: 8rem;
  margin-bottom: 5rem;
  color: #666;
}
/* ... */

